<resources>
    <string name="app_name">Workout</string>
    <string name="title_news">News</string>
    <string name="title_dashboard">Tracker</string>
    <string name="title_notifications">History</string>
    <string name="title_schedule">Scheduler</string>
    <string name="title_add_schedule">Add Schedule</string>
    <string name="title_activity_scheduler">SchedulerActivity</string>
    <string name="button_save">Add</string>
    <string name="type_cycling">Cycling</string>
    <string name="type_run">Running</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="autotrack">Autotrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>