<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.workout.ui.home.HomeFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.workout.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.workout.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.workout.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" >
        <action
            android:id="@+id/action_navigation_schedule_to_addScheduleFragment"
            app:destination="@id/navigation_add_schedule" />
    </fragment>
    <fragment
        android:id="@+id/navigation_add_schedule"
        android:name="com.example.workout.ui.schedule.AddScheduleFragment"
        android:label="@string/title_add_schedule"
        tools:layout="@layout/fragment_add_schedule" >
        <action
            android:id="@+id/action_navigation_add_schedule_to_navigation_schedule"
            app:destination="@id/navigation_schedule" />
    </fragment>
</navigation>