<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.AddScheduleFragment">

    <TextView
        android:id="@+id/text_add_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/track_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type of Sport: "
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/schedule_cycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_cycling"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/schedule_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_run"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:textAlignment="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your target: "
            android:textStyle="bold"/>
        <LinearLayout
            android:id="@+id/input_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/field_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" km"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <EditText
                android:id="@+id/field_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="1000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" step"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/radio_once"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="once"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radio_everyday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="everyday"/>
        <RadioButton
            android:id="@+id/radio_specific"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="specific day"/>
    </RadioGroup>

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:fontFamily="sans-serif-light"
        android:inputType="none"
        android:focusable="false"
        android:clickable="true"
        android:hint="Tap here to set date"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
    <EditText
        android:id="@+id/edit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:fontFamily="sans-serif-light"
        android:inputType="none"
        android:focusable="false"
        android:hint="Tap to set start time"
        android:layout_margin="8dp"
        android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:fontFamily="sans-serif-light"
            android:inputType="none"
            android:focusable="false"
            android:hint="Tap to set end time"
            android:layout_margin="8dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/day_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center">
        <CheckBox
            android:id="@+id/checkbox_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mon"
            />
        <CheckBox
            android:id="@+id/checkbox_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tue"/>
        <CheckBox
            android:id="@+id/checkbox_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wed"/>
        <CheckBox
            android:id="@+id/checkbox_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thu"/>
        <CheckBox
            android:id="@+id/checkbox_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fri"/>
        <CheckBox
            android:id="@+id/checkbox_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sat"/>
        <CheckBox
            android:id="@+id/checkbox_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sun"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/button_save"
        android:textColor="@color/white" />

</LinearLayout>